# kraken_collector

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README-ja.md  Readme.md  build.rs
assets/: debug_env.sh  docker-compose.yml  env.sh  env_collector.sh  grpcurl.sh  kraken_collector.env  kraken_collector.service
config/: allowed_uuids.yml  mqttd.conf
proto/: kraken.proto
src/: collectors.rs  config.rs  main.rs  service.rs
src/collectors/: bjig.rs  camera.rs  email.rs  grpc.rs  ibeacon.rs  mqtt.rs  serial.rs  tcp.rs  textfile.rs  webhook.rs  websocket.rs
src/collectors/support/: mod.rs
test-tools/: grpc_server.rs  mqtt_broker.rs  mqtt_client.rs  websocket_client.rs  websocket_server.rs
