[package]
name = "kraken_collector"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "test-grpc"
path = "test-tools/grpc_server.rs"

[[bin]]
name = "test-mqtt"
path = "test-tools/mqtt_client.rs"

[[bin]]
name = "test-mqtt-broker"
path = "test-tools/mqtt_broker.rs"

[[bin]]
name = "test-websocket"
path = "test-tools/websocket_client.rs"

[[bin]]
name = "test-websocket-server"
path = "test-tools/websocket_server.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
tokio = { version = "1.40.0", features = ["full"] }
config = "0.14"
bytes = "1.7.2"
pin-project-lite = "0.2.14"
websocket = "0.27.1"
tonic = "0.12.2"
prost = "0.13.2"
hyper = "1.5.0"
rumqttd = "0.19.0"
rumqttc = "0.20.0"
#rumqttc = "0.24.0"
http = "1.1.0"
http-body-util = "0.1.2"
btleplug = "0.11.6"
futures = "0.3.31"
uuid = "1.10.0"
serde_yaml = "0.9.34"
serialport = "4.7.0"

[build-dependencies]
#tonic-build = { version = "0.8.4", features = ["prost"]}
tonic-build = { version = "0.12.2", features = ["prost"]}
