[package]
name = "kraken_collector"
version = "2.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "test-grpc"
path = "test-tools/grpc_server.rs"

[[bin]]
name = "test-mqtt"
path = "test-tools/mqtt_client.rs"

[[bin]]
name = "test-mqtt-broker"
path = "test-tools/mqtt_broker.rs"

[[bin]]
name = "test-websocket"
path = "test-tools/websocket_client.rs"

[[bin]]
name = "test-websocket-server"
path = "test-tools/websocket_server.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }
config = "0.15.19"
bytes = "1.11.0"
pin-project-lite = "0.2.16"
tokio-tungstenite = "0.28.0"
tonic = "0.12.2"
prost = "0.13.2"
hyper = "1.8.1"
rumqttd = "0.20.0"
rumqttc = "0.25.0"
http = "1.4.0"
http-body-util = "0.1.3"
btleplug = "0.11.8"
futures = "0.3.31"
uuid = "1.19.0"
serde_yaml = "0.9.34"
serialport = "4.8.1"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
notify-types = "2.0.0"
hf = "0.5.1"
nokhwa = { version = "0.10.10", features = ["input-native"] }

[build-dependencies]
tonic-build = { version = "0.12.2", features = ["prost"]}
